<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:clickable="true"
    tools:context=".Fragments.SearchCredentialsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/baloo"
            android:text="@string/edit_search_credentials"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_background"
            android:fontFamily="@font/baloo"
            android:text="@string/gender"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/ivMaleBack"
            app:layout_constraintStart_toStartOf="@+id/ivMaleBack"
            app:layout_constraintTop_toTopOf="@+id/tvAge" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner_background"
            android:fontFamily="@font/baloo"
            android:text="@string/age"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/npAgeBig"
            app:layout_constraintStart_toStartOf="@+id/npAgeSmall"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/ivMaleBack"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toTopOf="@id/ivFemaleBack"
            app:layout_constraintEnd_toStartOf="@+id/ivDummy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/npAgeSmall" />

        <ImageView
            android:id="@+id/ivFemaleBack"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="@+id/npAgeSmall"
            app:layout_constraintEnd_toEndOf="@+id/ivMaleBack"
            app:layout_constraintStart_toStartOf="@+id/ivMaleBack"
            app:layout_constraintTop_toBottomOf="@id/ivMaleBack" />

        <TextView
            android:id="@+id/btMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/male_char"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/ivMaleBack"
            app:layout_constraintEnd_toEndOf="@id/ivMaleBack"
            app:layout_constraintStart_toStartOf="@id/ivMaleBack"
            app:layout_constraintTop_toTopOf="@id/ivMaleBack" />

        <TextView
            android:id="@+id/btFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/female_char"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/ivFemaleBack"
            app:layout_constraintEnd_toEndOf="@id/ivFemaleBack"
            app:layout_constraintStart_toStartOf="@id/ivFemaleBack"
            app:layout_constraintTop_toTopOf="@id/ivFemaleBack" />

        <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
            android:id="@+id/npAgeSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/rounded_corner_background"
            app:layout_constraintEnd_toStartOf="@id/npAgeBig"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/ivDummy"
            app:layout_constraintTop_toBottomOf="@+id/tvAge"
            app:mnpEditable="false"
            app:mnpMaxValue="99"
            app:mnpMinValue="18"
            app:mnpSeparatorColor="@color/white"
            app:mnpTextColor="@color/white"
            app:mnpTextSize="16sp"
            app:mnpTextStyle="bold"
            app:mnpValue="25"
            app:mnpWrapped="false" />

        <com.github.stephenvinouze.materialnumberpickercore.MaterialNumberPicker
            android:id="@+id/npAgeBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner_background"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/npAgeSmall"
            app:layout_constraintTop_toTopOf="@+id/npAgeSmall"
            app:mnpEditable="false"
            app:mnpMaxValue="99"
            app:mnpMinValue="18"
            app:mnpSeparatorColor="@color/white"
            app:mnpTextColor="@color/white"
            app:mnpTextSize="16sp"
            app:mnpTextStyle="bold"
            app:mnpValue="25"
            app:mnpWrapped="false" />

        <ImageView
            android:id="@+id/ivDummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/transparent_circle"
            android:fontFamily="@font/baloo"
            android:padding="12dp"
            android:text="@string/update"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btBack"
            app:layout_constraintTop_toBottomOf="@+id/npAgeBig" />

        <TextView
            android:id="@+id/btBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:background="@color/transparent_red"
            android:fontFamily="@font/baloo"
            android:padding="12dp"
            android:text="@android:string/cancel"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btUpdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/npAgeBig" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>